src/generated/antlr/CycloneParser.js
// Generated from grammar/CycloneParser.g4 by ANTLR 4.13.1
// jshint ignore: start
import antlr4 from 'antlr4';
import CycloneParserListener from './CycloneParserListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class CycloneParser extends antlr4.Parser {

    static grammarFileName = "CycloneParser.g4";
    static literalNames = [ null, "'->'", "'<->'", "'@'", "'|'", "':'", 
                            "'::'", "':='", "','", "'.'", "'..'", "'='", 
                            "'>'", "'>='", "'#'", "'{'", "'['", "'<'", "'<='", 
                            "'('", "'-'", "'!='", "'}'", "']'", "')'", "';'", 
                            "'/'", "'*'", "'+'", "'xor'", "'=>'", "'!'", 
                            "'^'", "'_'", "'&'", "'~'", "'++'", "'--'", 
                            "'**'", "'%'", "'||'", "'&&'", "'+='", "'-='", 
                            "'*='", "'/='", "'<<='", "'>>='", "'<<'", "'>>'", 
                            "'=='", "'global'", "'native'", "'debug'", "'log'", 
                            "'output'", "'trace'", "'precision'", "'timeout'", 
                            "'detect'", "'bvdisplay'", "'state'", "'node'", 
                            "'machine'", "'graph'", "'transition'", "'trans'", 
                            "'edge'", "'record'", "'const'", "'on'", "'label'", 
                            "'invariant'", "'int'", "'bool'", "'real'", 
                            "'char'", "'string'", "'enum'", "'where'", "'start'", 
                            "'final'", "'abstract'", "'normal'", "'prev'", 
                            "'goal'", "'check'", "'for'", "'stop'", "'at'", 
                            "'via'", "'condition'", "'reach'", "'with'", 
                            "'enumerate'", "'let'", "'each'", "'assert'", 
                            "'initial'", "'in'", "'fresh'", "'option-'", 
                            "'always'", "'some'", "'one'", "'upto'", "'function'", 
                            "'return'", "'if'", "'else'", "'bv'" ];
    static symbolicNames = [ null, "ARROW", "BI_ARROW", "AT_SIGN", "BAR", 
                             "COLON", "COLON_COLON", "COLON_EQUAL", "COMMA", 
                             "DOT", "DOTDOT", "EQUAL", "GREATER", "GREATER_EQUAL", 
                             "HASH", "LBRACE", "LBRACK", "LESS", "LESS_EQUAL", 
                             "LPAREN", "MINUS", "NOT_EQUAL", "RBRACE", "RBRACK", 
                             "RPAREN", "SEMI", "SLASH", "STAR", "PLUS", 
                             "XOR", "IMPLIES", "NOT", "HAT", "P_OP_ONE", 
                             "BIT_AND", "BIT_NEGATION", "PLUS_PLUS", "MINUS_MINUS", 
                             "TIMES_TIMES", "MOD", "OR", "AND", "ASSIGN_PLUS_EQ", 
                             "ASSIGN_MINUS_EQ", "ASSIGN_TIMES_EQ", "ASSIGN_DIV_EQ", 
                             "ASSIGN_SHIFT_LEFT", "ASSIGN_SHIFT_RIGHT", 
                             "SHIFT_LEFT", "SHIFT_RIGHT", "DOUBLE_EQUAL", 
                             "GLOBAL", "NATIVE", "DEBUG", "LOG", "OUTPUT", 
                             "TRACE", "PRECISION", "TIMEOUT", "DETECT", 
                             "BVDISPLAY", "STATE", "NODE", "MACHINE", "GRAPH", 
                             "TRANS1", "TRANS2", "EDGE", "RECORD", "CONST", 
                             "ON", "LABEL", "INVARIANT", "INT", "BOOL", 
                             "REAL", "CHAR", "STRING", "ENUM", "WHERE", 
                             "START", "FINAL", "ABSTRACT", "NORMAL", "PREV", 
                             "GOAL", "CHECK", "FOR", "STOP", "AT", "VIA", 
                             "CONDITION", "REACH", "WITH", "ENUMERATE", 
                             "LET", "EACH", "ASSERT", "INITIAL", "IN", "FRESH", 
                             "OPTION", "ALWAYS", "SOME", "ONE", "UPTO", 
                             "FUNCTION", "RETURN", "IF", "ELSE", "BV", "INTLITERAL", 
                             "BVLITERAL", "REALLITERAL", "CHARLITERAL", 
                             "STRINGLITERAL", "BOOLLITERAL", "ENUMLITERAL", 
                             "IDENT", "ML_COMMENT", "SL_COMMENT", "WS" ];
    static ruleNames = [ "identifier", "compOptions", "optionName", "program", 
                         "machineDecl", "machineScope", "stateExpr", "stateScope", 
                         "trans", "transScope", "transOp", "transDef", "transExclExpr", 
                         "invariantExpression", "inExpr", "invariantScope", 
                         "goal", "checkExpr", "forExpr", "stopExpr", "viaExpr", 
                         "withExpr", "letExpr", "pathAssignStatement", "pathCondAssignExpr", 
                         "pathExpr", "pathCondition", "orPathCondition", 
                         "andPathCondition", "xorPathCondition", "unaryPathCondition", 
                         "primaryCondition", "parPathCondition", "stateIncExpr", 
                         "pathPrimaryExpr", "pathOp", "label", "stateModifier", 
                         "literal", "intLiteral", "realLiteral", "boolLiteral", 
                         "stringLiteral", "charLiteral", "bvLiteral", "enumLiteral", 
                         "record", "recordScope", "recordVariableDeclGroup", 
                         "recordVariableDecl", "globalConstantGroup", "globalConstantDecl", 
                         "globalVariableGroup", "localVariableGroup", "modifier", 
                         "type", "primitiveBvType", "bvType", "primitiveType", 
                         "enumType", "enumDecl", "variableDeclarator", "whereExpr", 
                         "variableInitializer", "assertExpr", "assertMainExpr", 
                         "statement", "expression", "conditionalImpliesExpression", 
                         "conditionalOrExpression", "conditionalAndExpression", 
                         "conditionalXorExpression", "bitwiseOrExpression", 
                         "bitwiseAndExpression", "equalityExpression", "relationalExpression", 
                         "bitShiftExpression", "additiveExpression", "multiplicativeExpression", 
                         "powExpression", "unaryExpression", "unaryExpressionNotPlusMinus", 
                         "oneExpr", "freshExpr", "initialExpr", "functionDeclaration", 
                         "functionBodyScope", "functionParamsDecl", "functionParam", 
                         "returnExpr", "primary", "dotIdentifierExpr", "parExpression", 
                         "funCall", "iteStatement", "annotationExpr" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = CycloneParser.ruleNames;
        this.literalNames = CycloneParser.literalNames;
        this.symbolicNames = CycloneParser.symbolicNames;
    }



	identifier() {
	    let localctx = new IdentifierContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, CycloneParser.RULE_identifier);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 192;
	        this.match(CycloneParser.IDENT);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	compOptions() {
	    let localctx = new CompOptionsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, CycloneParser.RULE_compOptions);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 194;
	        this.match(CycloneParser.OPTION);
	        this.state = 195;
	        this.optionName();
	        this.state = 196;
	        this.match(CycloneParser.EQUAL);
	        this.state = 197;
	        this.literal();
	        this.state = 198;
	        this.match(CycloneParser.SEMI);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	optionName() {
	    let localctx = new OptionNameContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, CycloneParser.RULE_optionName);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 200;
	        _la = this._input.LA(1);
	        if(!(((((_la - 53)) & ~0x1f) === 0 && ((1 << (_la - 53)) & 255) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	program() {
	    let localctx = new ProgramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, CycloneParser.RULE_program);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 205;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===101) {
	            this.state = 202;
	            this.compOptions();
	            this.state = 207;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 208;
	        this.machineDecl();
	        this.state = 209;
	        this.match(CycloneParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	machineDecl() {
	    let localctx = new MachineDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, CycloneParser.RULE_machineDecl);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 211;
	        _la = this._input.LA(1);
	        if(!(_la===63 || _la===64)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 212;
	        this.identifier();
	        this.state = 213;
	        this.machineScope();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	machineScope() {
	    let localctx = new MachineScopeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, CycloneParser.RULE_machineScope);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 215;
	        this.match(CycloneParser.LBRACE);
	        this.state = 222;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(((((_la - 68)) & ~0x1f) === 0 && ((1 << (_la - 68)) & 1763) !== 0) || _la===106 || _la===110) {
	            this.state = 220;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 73:
	            case 74:
	            case 75:
	            case 77:
	            case 78:
	            case 110:
	                this.state = 216;
	                this.globalVariableGroup();
	                break;
	            case 69:
	                this.state = 217;
	                this.globalConstantGroup();
	                break;
	            case 68:
	                this.state = 218;
	                this.record();
	                break;
	            case 106:
	                this.state = 219;
	                this.functionDeclaration();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 224;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 228;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(((((_la - 61)) & ~0x1f) === 0 && ((1 << (_la - 61)) & 7864323) !== 0)) {
	            this.state = 225;
	            this.stateExpr();
	            this.state = 230;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 234;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(((((_la - 65)) & ~0x1f) === 0 && ((1 << (_la - 65)) & 7) !== 0)) {
	            this.state = 231;
	            this.trans();
	            this.state = 236;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 240;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===72) {
	            this.state = 237;
	            this.invariantExpression();
	            this.state = 242;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 244;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===85) {
	            this.state = 243;
	            this.goal();
	        }

	        this.state = 246;
	        this.match(CycloneParser.RBRACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	stateExpr() {
	    let localctx = new StateExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, CycloneParser.RULE_stateExpr);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 251;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(((((_la - 80)) & ~0x1f) === 0 && ((1 << (_la - 80)) & 15) !== 0)) {
	            this.state = 248;
	            this.stateModifier();
	            this.state = 253;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 254;
	        _la = this._input.LA(1);
	        if(!(_la===61 || _la===62)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 255;
	        this.identifier();
	        this.state = 256;
	        this.stateScope();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	stateScope() {
	    let localctx = new StateScopeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, CycloneParser.RULE_stateScope);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 258;
	        this.match(CycloneParser.LBRACE);
	        this.state = 262;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(((((_la - 19)) & ~0x1f) === 0 && ((1 << (_la - 19)) & 70147) !== 0) || ((((_la - 98)) & ~0x1f) === 0 && ((1 << (_la - 98)) & 2089541) !== 0)) {
	            this.state = 259;
	            this.statement();
	            this.state = 264;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 265;
	        this.match(CycloneParser.RBRACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	trans() {
	    let localctx = new TransContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, CycloneParser.RULE_trans);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 267;
	        _la = this._input.LA(1);
	        if(!(((((_la - 65)) & ~0x1f) === 0 && ((1 << (_la - 65)) & 7) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 269;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===118) {
	            this.state = 268;
	            this.identifier();
	        }

	        this.state = 271;
	        this.transScope();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	transScope() {
	    let localctx = new TransScopeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, CycloneParser.RULE_transScope);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 273;
	        this.match(CycloneParser.LBRACE);
	        this.state = 274;
	        this.identifier();

	        this.state = 275;
	        this.transOp();
	        this.state = 276;
	        this.transDef();
	        this.state = 280;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===70 || _la===71) {
	            this.state = 278;
	            _la = this._input.LA(1);
	            if(!(_la===70 || _la===71)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 279;
	            this.label();
	        }

	        this.state = 285;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===79) {
	            this.state = 282;
	            this.whereExpr();
	            this.state = 283;
	            this.match(CycloneParser.SEMI);
	        }

	        this.state = 287;
	        this.match(CycloneParser.RBRACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	transOp() {
	    let localctx = new TransOpContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, CycloneParser.RULE_transOp);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 289;
	        _la = this._input.LA(1);
	        if(!(_la===1 || _la===2)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	transDef() {
	    let localctx = new TransDefContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, CycloneParser.RULE_transDef);
	    var _la = 0;
	    try {
	        this.state = 307;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 118:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 291;
	            this.identifier();
	            this.state = 296;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===8) {
	                this.state = 292;
	                this.match(CycloneParser.COMMA);
	                this.state = 293;
	                this.identifier();
	                this.state = 298;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            break;
	        case 27:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 299;
	            this.match(CycloneParser.STAR);
	            this.state = 301;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===16) {
	                this.state = 300;
	                this.transExclExpr();
	            }

	            break;
	        case 28:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 303;
	            this.match(CycloneParser.PLUS);
	            this.state = 305;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===16) {
	                this.state = 304;
	                this.transExclExpr();
	            }

	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	transExclExpr() {
	    let localctx = new TransExclExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, CycloneParser.RULE_transExclExpr);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 309;
	        this.match(CycloneParser.LBRACK);
	        this.state = 310;
	        this.identifier();
	        this.state = 315;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===8) {
	            this.state = 311;
	            this.match(CycloneParser.COMMA);
	            this.state = 312;
	            this.identifier();
	            this.state = 317;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 318;
	        this.match(CycloneParser.RBRACK);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	invariantExpression() {
	    let localctx = new InvariantExpressionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, CycloneParser.RULE_invariantExpression);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 320;
	        this.match(CycloneParser.INVARIANT);
	        this.state = 321;
	        this.identifier();
	        this.state = 322;
	        this.invariantScope();
	        this.state = 324;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===99) {
	            this.state = 323;
	            this.inExpr();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


